--- a/CocoaAR/Base.lproj/Main.storyboard
+++ b/CocoaAR/Base.lproj/Main.storyboard
@@ -775,6 +775,13 @@
                                 <subviews>
                                     <customView translatesAutoresizingMaskIntoConstraints="NO" id="rv0-cz-lIf" customClass="MyARView" customModule="CocoaAR" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="513" height="300"/>
+                                        <gestureRecognizers>
+                                            <clickGestureRecognizer delaysPrimaryMouseButtonEvents="YES" numberOfClicksRequired="1" id="gHn-Xy-zqr">
+                                                <connections>
+                                                    <action selector="clickGestureRecognizerDidTrigger:" target="bUh-aO-pRZ" id="gjy-qt-Jhk"/>
+                                                </connections>
+                                            </clickGestureRecognizer>
+                                        </gestureRecognizers>
                                     </customView>
                                     <customView translatesAutoresizingMaskIntoConstraints="NO" id="A5k-c9-Rf3">
                                         <rect key="frame" x="521" y="0.0" width="100" height="300"/>
